test/message/fail/spread-call-4.out
*%(basename)s:5: TypeError: x is not iterable
console.log(1, ...x);
                  ^
TypeError: x is not iterable
    at *%(basename)s:5:9
